# fft_bench

./: .gitignore  README.md
cpp_fft_bench/: .gitignore  build.sh  cpp_fft_bench.cpp
notebooks/: 3dplot_all.ipynb  exp3_overview.ipynb  exp3_sizes.ipynb  exp_3.ipynb  exp_3_better.ipynb  exp_3_plan_speedup.ipynb  exp_3_sv.ipynb  exp_limited_range.ipynb  plan_type_plot.ipynb  threading_expr.ipynb
python_scripts/: gen_plan_sizes.py  param_sweep.py  test_rust_expanse_1.py  test_rust_expanse_2.py  test_rust_expanse_3.py  test_rust_expanse_4.py  test_rust_expanse_mkl_threads.py  test_rust_macbook.py
results/expanse_1/: rust_100000_10_estimate.json  rust_100000_10_measure.json  rust_100000_10_patient.json  rust_100000_120_estimate.json  rust_100000_120_measure.json  rust_100000_120_patient.json  rust_100000_122_estimate.json  rust_100000_122_measure.json  rust_100000_122_patient.json  rust_100000_126_estimate.json  rust_100000_126_measure.json  rust_100000_126_patient.json  rust_100000_127_estimate.json  rust_100000_127_measure.json  rust_100000_127_patient.json  rust_100000_128_estimate.json  rust_100000_128_measure.json  rust_100000_128_patient.json  rust_100000_16_estimate.json  rust_100000_16_measure.json  rust_100000_16_patient.json  rust_100000_1_estimate.json  rust_100000_1_measure.json  rust_100000_1_patient.json  rust_100000_2_estimate.json  rust_100000_2_measure.json  (+241 more)
rust_fft_bench/: .gitignore  Cargo.toml
rust_fft_bench/src/: build_info.rs  main.rs  plan_type.rs
slurm_jobs/: expanse_1.sh  expanse_2.sh  expanse_3.sh  expanse_4.sh  expanse_mkl_threads.sh
(+43185 files in other folders)
