[package]
name = "rust_fft_bench"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
fftw = { git = "https://github.com/sallysoul/fftw3-rs.git", tag = "fftw3-v0.8.5" }
rand = "0.10.1"
rayon = "1.10.0"
serde = { version = "1.0.228", features = ["serde_derive"] }
serde_json = "1.0.150"

[build]
rustflags = ["-C", "target-cpu=native"]

[profile.release]
lto = "fat" 
codegen-units = 1
panic = "abort"
